[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solana-rpc-resilient"
version = "0.1.0"
description = "Production-grade Solana RPC client with rate limiting, circuit breaking, and provider rotation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "JinUltimate" },
]
keywords = ["solana", "rpc", "blockchain", "web3", "resilient", "rate-limit", "circuit-breaker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.0",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/JinUltimate1995/solana-rpc-resilient"
Repository = "https://github.com/JinUltimate1995/solana-rpc-resilient"
Issues = "https://github.com/JinUltimate1995/solana-rpc-resilient/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
